--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Scorekeeper</string>
-    <string name="team_1">Team 1</string>
-    <string name="team_2">Team 2</string>
+    <string name="team_1">Manchester United</string>
+    <string name="team_2">Manchester City</string>
     <string name="initial_count">0</string>
     <string name="minus_button_description">Minus Button</string>
     <string name="plus_button_description">Plus Button</string>
